--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,6 @@
         <!-- Navigation -->
         <nav class="nav-bar">
             <a href="#bio-tool" class="nav-link">CREAT BOT</a>
-            <a href="#item-tool" class="nav-link">CODEX TEAM </a>
-            <a href="#api-tools" class="nav-link">PANEL DEV:</a>
             <a href="#team" class="nav-link">BNGX</a>
         </nav>
 
@@ -82,7 +80,7 @@
                     <h3 class="dev-name purple-text">BNGX</h3>
                     <p class="dev-role">CODEX TEAM PANEL</p>
                     <p class="dev-description">Site creator</p>
-                    <a href="https://t.me/BNGXTTT" target="_blank" class="btn btn-telegram purple">
+                    <a href="https://t.me/BNGXXXX" target="_blank" class="btn btn-telegram purple">
                         <i class="fab fa-telegram-plane"></i> Contact via Telegram
                     </a>
                 </div>
