--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,9 @@
                         <input type="text" id="user-id" placeholder="Enter Friend UID..." class="input-field" />
                     </div>
                     <div class="input-group">
+                        <input type="number" id="friend-days" placeholder="Enter number of days..." class="input-field" min="1" />
+                    </div>
+                    <div class="input-group">
                         <button id="adding-friend" class="btn btn-api">add friend</button>
                     </div>
                     <div id="add-friend-status" class="status-message" style="margin-top: 10px;"></div>
