--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -1,4 +1,4 @@
-```html
+تي برا امشي نيك اا ولد لقحبة 😂🤣😂
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -384,6 +384,3 @@
 </script>
 </body>
 </html>
-```
-
-مصادر
